--- a/shopping_list.html
+++ b/shopping_list.html
@@ -23,7 +23,7 @@
     <div>
       <label for="item">Enter a new item:</label>
       <input type="text" name="item" id="item">
-      <button>Add item</button>
+      <button onclick="Function()">Add item</button>
     </div>
 
     <ul>
@@ -31,6 +31,14 @@
     </ul>
 
     <script>
+        const list = document.querySelector('ul');
+        const input = document.querySelector('input');
+        const button = document.querySelector('button');
+
+        button.onclick = function() {
+            
+        }
+
 
     </script>
   </body>
