created list,input,button elements

--- a/shopping_list.html
+++ b/shopping_list.html
@@ -32,12 +32,16 @@
 
     <script>
         const list = document.querySelector('ul');
-        const input = document.querySelector('input');
+        let input = document.querySelector('input');
         const button = document.querySelector('button');
-
+        
         button.onclick = function() {
-            
+            let input_value = document.querySelector('input').value;
+            input_value = '';
         }
+        const list = document.CreateElement('li');
+        const span = document.CreateElement('span');
+        const new_button = document.CreateElement('button');
 
 
     </script>
