--- a/js.info.html
+++ b/js.info.html
@@ -26,13 +26,14 @@
 
   </body>
   <script>
-    let input;
-    do {
-      
-      input = parseInt(prompt("Enter a number greater than 100"));
-      console.log(input);
+    //if after remainder operation the number 
+    let n;
+    function isPrime(num) {
+      if (num % (num-1) != 0 && num % (num-2) != 0) {
+        console.log("prime")
+      }
     }
-    while (input < 100 || !input);
+    isPrime(12);
   </script>
 
 </html>
