--- a/persistentNumberAsker.html
+++ b/persistentNumberAsker.html
@@ -32,7 +32,7 @@
       input = parseInt(prompt("Enter a number greater than 100"));
       console.log(input);
     }
-    while (input < 100 || !input);
+    while (input <= 100 || !input);
   </script>
 
 </html>
